--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -274,10 +274,10 @@
         <div class="footer">
             <h1 style="color: white;">AROUND THE WEB</h1>
            <div class="icons">
-            <img src="https://th.bing.com/th/id/OIP.ksE5lFiSzTeJngmjRZYKlgAAAA?rs=1&pid=ImgDetMain" width="90px" height="" alt="">
-            <img src="https://th.bing.com/th/id/OIP.Amcd6uomcBrkzfHXrg14gAHaHa?rs=1&pid=ImgDetMain" width="90px" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <a href="#" class="fa fa-facebook icon" ></a>
+            <a href="#" class="fa fa-twitter icon" ></a>
+            <a href="#" class="fa fa-instagram icon" ></a>
+            <a href="#" class="fa fa-linkedin icon" ></a>
            </div>
         </div>
         
@@ -287,6 +287,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
