--- a/portfolio.html
+++ b/portfolio.html
@@ -273,7 +273,11 @@
         </div>
         <div class="footer">
             <h1 style="color: white;">AROUND THE WEB</h1>
-           
+            <div class="icons">
+                <a href="#" class="fa fa-facebook icon" ></a>
+                <a href="#" class="fa fa-twitter icon" ></a>
+                <a href="#" class="fa fa-instagram icon" ></a>
+                <a href="#" class="fa fa-linkedin icon" ></a>
            </div>
         </div>
         
