I've added my name in the place of Alexander

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="left-card">
                 <div class="words">
                     <span>HELLO</span>
-                    <h1>I'm <b>Alexander <br>a </b> Web Developer &VerticalBar;</h1>
+                    <h1>I'm <b>SHARANYA <br>a </b> Web Developer &VerticalBar;</h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, voluptatum at sapiente, iste
                         aperiam accusantium tempore distinctio vero, nobis error dolore libero expedita consequuntur
                         sint mollitia nostrum necessitatibus minima voluptatibus.</p>
